<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IzharHalqi">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="Izhar Halqi"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:textStyle="normal"
            android:padding="12dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/IdzhaHalqi_p1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/IdzharHalqi_p2"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="normal"
            android:gravity="center"
            android:layout_margin="15dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/IdzharHalqi_p3"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Contoh :"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            tools:ignore="HardcodedText,RtlSymmetry"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/IdzharHalqi_p4"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="normal"
            android:gravity="right"
            android:layout_margin="15dp"
            android:paddingStart="20dp"
            tools:ignore="RtlHardcoded,RtlSymmetry"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="20dp"
            android:text="Keterangan : "
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="20dp"
            android:text="@string/IdzharHalqi_p5"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/IdzharHalqi_p6"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Play"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">
        <Button
            android:id="@+id/buttonnextIH"
            android:onClick="nextIH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</LinearLayout>
</ScrollView>